--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -18,80 +18,92 @@
             android:orientation="horizontal"
             android:layout_weight="0.25">
 
-            <TextView
-                android:id="@+id/user"
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lines="2"
-                android:maxLines="4"
-                android:singleLine="false"/>
+                android:layout_height="match_parent">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/userLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:text="Username:   " />
+
+                    <TextView
+                        android:id="@+id/userName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="false"
+                        android:textSize="16sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <TextView
+                        android:id="@+id/pointsLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:text="@string/points" />
+
+                    <TextView
+                        android:id="@+id/points"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp" />
+                </TableRow>
+
+            </TableLayout>
 
         </LinearLayout>
 
+        <View style="@style/Divider"/>
+
         <LinearLayout
+            android:id="@+id/st"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="0.25">
+            android:layout_weight="0.25"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/stats"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Stats"
+                android:layout_height="0dp"
+                android:layout_weight="0.9"
                 android:lines="2"
                 android:maxLines="4"
-                android:singleLine="false"/>
+                android:singleLine="false"
+                android:textSize="16sp"
+                tools:ignore="NestedWeights" />
 
             <Button
                 android:id="@+id/highscore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
                 android:text="@string/highscore" />
 
         </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
+        <View style="@style/Divider"/>
+
+        <include layout="@layout/content_profil_tab_menu" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/button11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Button" />
-
-                    <Button
-                        android:id="@+id/button10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Button" />
-                </LinearLayout>
-
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/fab"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_margin="@dimen/fab_margin"
-                    app:backgroundTint="@color/colorAccent"
-                    app:srcCompat="@android:drawable/ic_menu_revert" />
-
-            </LinearLayout>
-        </ScrollView>
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:backgroundTint="@color/colorAccent"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
 
     </LinearLayout>
 
