--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -37,7 +37,8 @@
                 android:id="@+id/endgame"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="30sp" />
         </LinearLayout>
 
         <LinearLayout
