--- a/app/src/main/res/layout/content_profil_tab_menu.xml
+++ b/app/src/main/res/layout/content_profil_tab_menu.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_weight = "0.5"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ProfilTabMenuActivity"
+    tools:context=".ProfileTabMenuActivity"
     tools:showIn="@layout/profil_tab_menu">
 
     <LinearLayout
