--- a/app/src/main/res/layout/activity_change_avatar.xml
+++ b/app/src/main/res/layout/activity_change_avatar.xml
@@ -7,6 +7,7 @@
     tools:context=".ChangeAvatarActivity">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,29 +16,46 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/choose_avatar"
+                android:textAlignment="center"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:id="@+id/avatarsLay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="10dp"/>
+                android:padding="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="end">
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <ProgressBar
+                    android:id="@+id/progress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="cancelBttn"
                     android:text="@string/cancel" />
 
                 <Button
                     android:id="@+id/button4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="changeBttn"
                     android:text="@string/change" />
             </LinearLayout>
         </LinearLayout>
