--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context="appView.TabMenuActivity$PlaceholderFragment">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/layout"
+        app:layout_constraintEnd_toStartOf="@+id/layout"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/layout"
+        app:layout_constraintTop_toBottomOf="@+id/layout" />
+
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
