--- a/app/src/main/res/layout/content_shop.xml
+++ b/app/src/main/res/layout/content_shop.xml
@@ -96,18 +96,24 @@
             android:gravity="end"
             android:orientation="horizontal">
 
+            <ProgressBar
+                android:id="@+id/progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/cancelBttn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="cancelBttn"
                 android:text="@string/cancel" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/buyBttn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="buyBttn"
                 android:text="@string/buy" />
         </LinearLayout>
     </LinearLayout>
