--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:weightSum = "1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
@@ -19,7 +20,7 @@
         <LinearLayout
             android:id="@+id/profilLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="0.25"
             android:orientation="horizontal">
 
@@ -82,7 +83,7 @@
         <LinearLayout
             android:id="@+id/st"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="0.25"
             android:orientation="vertical">
 
@@ -161,8 +162,8 @@
         <LinearLayout
             android:id="@+id/itemLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_height="0dp"
+            android:layout_weight="0.49"
             android:orientation="vertical">
 
             <TextView
@@ -184,7 +185,7 @@
             <ScrollView
                 style="@android:style/Widget.Holo.ScrollView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:scrollbarStyle="insideOverlay">
 
                 <LinearLayout
