--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -7,58 +7,67 @@
     android:layout_height="match_parent"
     tools:context="appView.TabMenuActivity$PlaceholderFragment">
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/layout"
-        app:layout_constraintEnd_toStartOf="@+id/layout"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/layout"
-        app:layout_constraintTop_toBottomOf="@+id/layout" />
-
-    <LinearLayout
-        android:id="@+id/layout"
+    <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <Button
-            android:id="@+id/changePass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/changePasswordBttn" />
-
-        <ToggleButton
-            android:id="@+id/themeBttn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/changeTheme" />
-
-        <Button
-            android:id="@+id/changeAvatar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/change_avatar" />
-
-        <Button
-            android:id="@+id/genKey"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/generate_new_game_key" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/keysLay"
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical"
-            android:gravity="center"></LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </LinearLayout>
+
+            <Button
+                android:id="@+id/changePass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/changePasswordBttn" />
+
+            <ToggleButton
+                android:id="@+id/themeBttn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/changeTheme" />
+
+            <Button
+                android:id="@+id/changeAvatar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/change_avatar" />
+
+            <Button
+                android:id="@+id/genKey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/generate_new_game_key" />
+
+            <ProgressBar
+                android:id="@+id/progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/scrollView3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/keysLay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"></LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
